--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mime": "^2.4.4",
     "path": "^0.12.7",
     "qiniu": "^7.3.0",
+    "valine": "^1.4.18",
     "vuepress": "^1.7.1",
     "vuepress-theme-reco": "1.5.5"
   },
